--- a/index.html
+++ b/index.html
@@ -43,7 +43,7 @@
   <body id="default_theme" class="it_service">
     <!-- loader -->
     <div class="bg_load">
-      <img class="loader_animation" src="images/loaders/loader_1.png" alt="#" />
+      <img class="loader_animation" src="images/logos/logo-posadas-media-azul-intro.png" alt="#" />
     </div>
     <!-- end loader -->
     <!-- header -->
@@ -61,7 +61,7 @@
                         ><i class="fa fa-home"></i
                       ></span>
                       <span class="topbar-hightlight"
-                        >540 Lorem Ipsum New York, AB 90218</span
+                        >Posadas, Misiones, Argentina</span
                       >
                     </li>
                     <li>
@@ -70,7 +70,7 @@
                       ></span>
                       <span class="topbar-hightlight"
                         ><a href="mailto:info@yourdomain.com"
-                          >info@yourdomain.com</a
+                          >contacto@posadasmedia.com</a
                         ></span
                       >
                     </li>
@@ -160,21 +160,21 @@
                     <li>
                       <a class="active" href="it_home.html">Home</a>
                       <ul>
-                        <li><a href="it_home.html">It Home Page</a></li>
+                        <li><a href="it_home.html">Página de inicio</a></li>
                         <li>
-                          <a href="it_home_dark.html">It Dark Home Page</a>
+                          <a href="it_home_dark.html">Página de inicio oscura</a>
                         </li>
                       </ul>
                     </li>
-                    <li><a href="it_about.html">About Us</a></li>
+                    <li><a href="it_about.html">Quienes somos</a></li>
                     <li>
-                      <a href="it_service.html">Service</a>
+                      <a href="it_service.html">Servicios</a>
                       <ul>
                         <li>
-                          <a href="it_service_list.html">Services list</a>
+                          <a href="it_service_list.html">Lista de servicios</a>
                         </li>
                         <li>
-                          <a href="it_service_detail.html">Services Detail</a>
+                          <a href="it_service_detail.html">Detalles del servicio</a>
                         </li>
                       </ul>
                     </li>
@@ -208,7 +208,7 @@
                       </ul>
                     </li>
                     <li>
-                      <a href="it_contact.html">Contact</a>
+                      <a href="it_contact.html">Contacto</a>
                       <ul>
                         <li><a href="it_contact.html">Contact Page 1</a></li>
                         <li><a href="it_contact_2.html">Contact Page 2</a></li>
